<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <ImageView
        android:id="@+id/bellIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_alarm_logo"
        android:contentDescription="@string/alarm_logo_cd"
        app:layout_constraintBottom_toTopOf="@+id/ringingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/ringingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ringing_task_instruction"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dismissButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bellIcon" />

    <Button
        android:id="@+id/dismissButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#6B4EFF"
        android:text="@string/ringing_dismiss_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringingTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
