<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/barcodeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/barcode_scan_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/cameraWindow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/barcodeTitle"
        app:layout_constraintBottom_toTopOf="@id/barcodeStatusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/cameraPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/barcode_camera_overlay_cd"
            app:tint="@android:color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/barcodeStatusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/barcode_preparing_camera"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
